# crawler

./: .gitignore  .secretenv.secret  .tool-versions  CONTRIBUTING.md  Makefile  README.md  data.csv  package-lock.json  package.json  pyproject.toml  serverless-compose.yml  serverless.common.yml  serverless.yml  setup.cfg
.github/workflows/: ci.yml
.gitsecret/keys/: pubring.kbx  trustdb.gpg
.gitsecret/paths/: mapping.cfg
aws-python-scheduled-cron-project/: handler.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
aws-python-scheduled-cron-project/src/: crawl_hh.py
collector/: .dockerignore  .tool-versions  Dockerfile  Makefile  README.md  handler.py  package.json  pdv.py  pyproject.toml  requirements.txt  runner.py  serverless.yml  setup.cfg
collector/rnd/: log.py  requests.http  rnd.ipynb
collector/src/: crawl_bazaraki.py  crawl_hh.py  crawl_linkedin.py  utils.py
collector/tests/: test_bazaraki.py  test_crawler_hh.py  test_crawler_linkedin.py
common/: .tool-versions  pyproject.toml  utils.py  yaml2env.py
common/common/: sls2env.py  utils.py
crawler-front/: app.py  package-lock.json  package.json  pyproject.toml  serverless.yml
docs/_templates/: badges.html  github.html  moreinfo.html
expreiments/: experiment.ipynb  linkedin.http  request.http
front/: .serverless-wsgi  Dockerfile  Makefile  app.py  package-lock.json  package.json  pdv.py  pyproject.toml  requirements.txt  runner.py  serverless.yml  settings.py  wsgi_handler.py
front/assets/: opioid.css
resources/: Makefile  serverless.yml
resources/2023-01-31_11-35-50/: hh.csv  linkedin.csv
resources/backup/: bazaraki.csv  hh.csv  linkedin.csv
tests/test_example/: test_some_function.py
worker/: .env  Makefile  data.json  handler.py  pyproject.toml  requirements.txt  runner.py  serverless.yml
worker/expreiments/: experiment.ipynb
worker/src/: crawl_hh.py
