[tool.poetry]
name = "aws-python-scheduled-cron-project"
version = "0.1.0"
description = ""
authors = ["alexeygrachev <agrachev@cindicator.com>"]
readme = "README.md"
packages = [{include = "aws_python_scheduled_cron_project"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pandas = "^1.5.2"
boto3 = "^1.26.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
