[tool.poetry]
name = "collector"
version = "0.1.0"
description = ""
authors = ["alexeygrachev <agrachev@cindicator.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pandas = "^1.5.2"
boto3 = "^1.26.16"
pyaml = "^21.10.1"
munch = "^2.5.0"
jsonpath-ng = "^1.5.3"
loguru = "^0.6.0"
sentry-sdk = "^1.15.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.2.1"


[tool.poetry.group.ci.dependencies]
common = {path = "../common", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
