[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["alexeygrachev <agrachev@cindicator.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^6.0"
boto3 = "^1.26.27"
pyaml = "^21.10.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yaml2env = 'common.yaml2env:main'
