[tool.poetry]
name = "front"
version = "0.1.0"
description = ""
authors = ["alexeygrachev <agrachev@cindicator.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.7.0"
plotly = "^5.11.0"
pandas = "^1.5.2"
setuptools = "^65.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

