[tool.poetry]
name = "front"
version = "0.1.0"
description = ""
authors = ["alexeygrachev <agrachev@cindicator.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.7.0"
plotly = "^5.11.0"
pandas = "^1.5.2"
setuptools = "^65.6.3"
boto3 = "^1.26.22"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

